--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html>
 <head>
   <title>My Simple Webpage</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      margin: 20px;
+    }
+
+    h1 {
+      color: #333333;
+      text-align: center;
+    }
+
+    p {
+      color: #666666;
+      font-size: 18px;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body>
 
   <h1>Hello, World!</h1>
   
-  <p>This is a simple webpage.</p>
+  <p>This is a simple webpage with some basic CSS styles.</p>
 
 </body>
 </html>
+
